# fastapi-tdd-docker

./: .gitignore  README  README.md  docker-compose.yaml
project/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  tox.ini
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  summaries.py
project/app/db/: __init__.py
project/app/models/: tortoise.py
project/tests/: conftest.py
